--- a/assets/styles/components/_map.scss
+++ b/assets/styles/components/_map.scss
@@ -2,19 +2,23 @@
 
 .home {
   .map-header {
-    background-color: $highlight;
+    background-color: $brand-primary;
     padding: 20px 0;
-    h4 {
+    h3 {
       color: $white !important;
+      margin-bottom: 0 !important;
+      margin-top: 0 !important;
       text-align: center;
-      margin-bottom: 10px !important;
+      text-transform: capitalize;
     }
   }
   .map-pointer {
-    background-color: $highlight;
+    background-color: $brand-primary;
     height: 30px;
-    position: relative;
-    bottom: 16px;
+    position: absolute;
+      left: 0;
+      right: 0;
+      top: 65px;
     margin: auto;
     transform: rotate(45deg);
     -ms-transform: rotate(45deg); /* IE 9 */
@@ -24,8 +28,6 @@
   }
   .map {
     pointer-events: none;
-    position: relative;
-      bottom: 30px;
     #map {
       height: 250px;
     }
