--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -5,18 +5,29 @@
 }
 
 /* all pages */
+.main {
+  padding-left: 0;
+  padding-right: 0;
+  ul, li, p {
+    line-height: 25px;
+  }
+  .card {
+    background: $white;
+    padding: 15px 20px;
+    margin-bottom: 25px;
+  }
+}
 .main, .sidebar {
   /* that font */
   p, ul, ol {
-    color: $brand-primary;
+    color: #05121D;
   }
   /* them headers */
   h1, h2, h3, h4, h5, h6 {
-    color: #05121D;
+    color: #133344;
   }
   h3 {
     margin-bottom: 25px;
-    text-transform: uppercase;
   }
   a {
     color: $brand-primary;
@@ -50,117 +61,12 @@ hr {
   .office-margin {
     margin-top: 55px;
   }
-  .contact-cta {
-    list-style-type: none;
-    margin: 0 auto 20px auto;
-    padding-left: 0;
-    text-align: center;
-    li {
-      display: inline-block;
-      text-align: center;
-      width: 35%;
-      a {
-        text-decoration: none;
-        .label {
-          box-shadow: #48483C 2px 2px 2px;
-          display: block;
-          font-size: 16px;
-          font-weight: 400;
-          padding: 1.2em 1.6em 1.3em;
-          text-transform: uppercase;
-          margin-left: 5%;
-          margin-right: 5%;
-          width: 90%;
-
-          .fa {
-            font-size: 20px;
-            padding: 5px 20px 5px 5px;
-          }
-        }
-        .label-default {
-          background-color: darken($highlight, 5%);
-          border-color: darken($highlight, 10%);
-
-          &:hover, &:active, &:focus, &:visited {
-            background-color: darken($highlight, 10%);
-            border-color: darken($highlight, 15%);
-          }
-        }
-
-        .label-primary {
-          background-color: darken($brand-primary, 5%);
-          border-color: darken($brand-primary, 10%);
-
-          &:hover, &:active, &:focus, &:visited {
-            background-color: darken($brand-primary, 10%);
-            border-color: darken($brand-primary, 15%);
-          }
-        }
-
-      }
-    }
-  }
 }
 
 @media (max-width: 1200px) {
   .main {
     .office-margin {
       margin-top: 40px;
-    }
-  }
-}
-@media (max-width: 991px){
-  .main, .sidebar {
-    .page-header {
-      margin-top: 0;
-    }
-    .office {
-      display: block;
-      float: none !important;
-      margin: auto;
-    }
-  }
-  .main {
-    .office-margin {
-      margin-top: 0;
-      margin-bottom: 30px;
-    }
-
-    .contact-cta {
-      li {
-        a {
-          .label-default, .label-primary {
-            font-size: 14px;
-          }
-        }
-      }
-    }
-  }
-}
-
-@media (max-width: 767px) {
-  .main {
-    .contact-cta {
-      li {
-        display: block;
-        margin: 10px auto;
-        width: 60%;
-      }
-    }
-  }
-}
-@media (max-width: 480px) {
-  .main {
-    .office {
-      height: 300px;
-      width: 90%;
-    }
-    .contact-cta {
-      li {
-        display: block;
-        margin: 10px auto;
-        width: 80%;
-      }
     }
   }
 }
