--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -69,4 +69,11 @@ hr {
       margin-top: 40px;
     }
   }
+  .patients {
+    .card {
+      img {
+        height: 147px;
+      }
+    }
+  }
 }
