--- a/assets/styles/components/_doctors.scss
+++ b/assets/styles/components/_doctors.scss
@@ -3,6 +3,11 @@
   .entry-content {
     background: $white;
     padding: 15px 15px 45px 15px;
+
+    .content {
+      position: relative;
+      bottom: 23px;
+    }
   }
   .physician-bg {
     background: url("/../wp-content/uploads/sites/2/2016/02/Physician-BG.jpg") no-repeat;
@@ -27,19 +32,27 @@
   }
   .single-image {
     border-radius: 3px;
-    height: 370px;
-    width: 350px;
+    float: left;
+    height: 280px;
+    margin-bottom: 25px;
+    margin-right: 15px;
+    width: 275px;
   }
   .physician-information {
     .header {
       background-color: $off-white;
       display: inline-block;
       font-size: 16px;
+      font-weight: 600;
+      letter-spacing: 0.3px;
       padding: 5px 10px;
+      text-shadow: $white 2px 2px;
       width: 100%;
     }
-    .content {
-      margin-bottom: 30px;
+    .separator {
+      margin: 0px;
+      position: relative;
+        bottom: 20px;
     }
     p {
       padding: 5px 10px;
@@ -63,23 +76,27 @@
     padding-left: 0;
     padding-right: 0;
     .entry-title {
-      background-color: $off-white;
-      padding: 15px;
+      background-color: rgba($highlight, 0.6);
+      padding: 10px 0;
+      position: absolute;
+        bottom: 25px;
+        left: 52px;
+        right: 52px;
       text-align: center;
       text-transform: uppercase;
       a {
-        color: $brand-primary;
-        width: 300px;
+        color: $white;
       }
       .specialty {
-        color: $brand-primary;
+        color: $white;
         font-size: 11px;
         margin-bottom: 0;
       }
 
     }
     .card {
-      margin: 15px;
+      margin: 15px 25px;
+      padding: 5px 0;
     }
     .doctor-portrait {
       img {
@@ -112,15 +129,21 @@
   .blog {
     .single-profile {
       .entry-title {
+        left: 44px;
+        right: 44px;
+        a {
+          font-size: 12px;
+        }
         .specialty {
+          font-size: 9px;
           position: relative;
             top: 2px;
         }
       }
       .doctor-portrait {
         img {
-          height: 175px;
-          width: 175px;
+          height: 225px;
+          width: 225px;
         }
       }
       .office-hours {
@@ -135,6 +158,27 @@
 @media (max-width: 991px){
   .blog {
     .single-profile {
+      .entry-title {
+        left: 0;
+        right: 0;
+        bottom: 40px;
+        width: 225px;
+        margin: auto;
+        a {
+          color: $white;
+        }
+        .specialty {
+          color: $white;
+          font-size: 9px;
+          margin-bottom: 0;
+        }
+
+      }
+      .card {
+        margin: 0 auto 25px auto;
+        padding: 15px 0;
+        width: 255px;
+      }
       .doctor-portrait {
         img {
           height: 225px;
@@ -149,6 +193,15 @@
   }
 }
 
+@media (max-width: 767px) {
+  .blog {
+    .single-profile {
+      .entry-title {
+        bottom: 15px;
+      }
+    }
+  }
+}
 @media (max-width: 480px) {
   .blog{
     .single-profile {
