--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -31,5 +31,10 @@
       p, a {
         font-size: 10px;
       }
+      .logo {
+        img {
+          width: 370px;
+        }
+      }
     }
   }
