--- a/assets/styles/layouts/_sidebar.scss
+++ b/assets/styles/layouts/_sidebar.scss
@@ -87,7 +87,7 @@
     height: 1100px;
     margin-left: 15px;
     margin-right: 15px;
-    margin-top: -20px;
+    margin-top: 5px;
     text-align: center;
     .textwidget {
       text-align: center;
@@ -112,9 +112,10 @@
 @media (max-width: 767px){
   .sidebar {
     // to override default
-    height: 850px;
+    height: auto;
     .rpwwt-widget {
       ul {
+        display: inline-block;
         li {
           img {
             margin: auto;
